fix: change card colors and font spacing

--- a/style.css
+++ b/style.css
@@ -316,8 +316,7 @@ h2, h3, h4, h5, h6, p, a {
   flex-direction: column;
   justify-content: center;
   max-width: 820px;
-  background: #350207;
-  /* background: linear-gradient(128.94deg, rgba(225, 2, 52, 0.4) 27.68%, rgba(225, 2, 52, 0) 81.95%); */
+  /* background: white; */  
   opacity: 0.8;
   box-shadow: 8px 8px 20px rgba(31, 0, 3, 0.25);
   border-radius: 2px;
@@ -329,22 +328,26 @@ h2, h3, h4, h5, h6, p, a {
   background-repeat: no-repeat;
   width: 100%;
   height: 235px;
-  border-top-left-radius: 2px;
-  border-top-right-radius: 2px;
+  border-top-left-radius: 4px;
+  border-top-right-radius: 4px;
 }
 
 .card .card-content {
   padding: 1.5rem;
+  background: var(--red10);
+  border-bottom-left-radius: 4px;
+  border-bottom-right-radius: 4px;
+
 }
 
 .card .card-content .card-title {
   font: 500 1.5rem 'Saira Condensed', sans-serif;
   line-height: 32px;
-  letter-spacing: 2px;
+  letter-spacing: 1px;
 }
 
 .card .card-content .card-subtitle {
-  color: var(--red10);
+  color: var(--red30);
   font: 400 1.2rem 'Saira Condensed', sans-serif;
   line-height: 18px;
 }
@@ -359,6 +362,11 @@ h2, h3, h4, h5, h6, p, a {
   gap: 16px;
   font-size: 1.5rem;
   color: var(--white10);
+}
+
+.card .card-content .social svg:hover {
+  color: var(--red30);
+  cursor: pointer;
 }
 
 /* CARDS STYLES =============== */
